Вывод во всех классах заменён на логгер, теперь таймстампы в мцв идут как строки, чтобы потом распарситься в генераторе, также обновлены генераторы для таймстампов в StatTypeBasedGenerator.java Также пофикшены некоторые ворнинги